kubeflow/kserve/authorizationpolicy-knative-user-ns.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: frederik-coquelet
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: allow-serving-tests
 namespace: frederik-coquelet
spec:
 action: ALLOW
 rules:
 # 1. mTLS for service from source "user1" namespace to destination service when TargetBurstCapacity=0 without local gateway and activator on the path
 # Source Service from "user1" namespace -> Destination Service in "user1" namespace
 - from:
   - source:
       namespaces: ["frederik-coquelet"]
 # 2. mTLS for service from source "user1" namespace to destination service with activator on the path
 # Source Service from "user1" namespace -> Activator(Knative Serving namespace) -> Destination service in "user1" namespace
 # unfortunately currently we could not lock down the source namespace as Activator does not capture the source namespace when proxying the request, see https://github.com/knative-sandbox/net-istio/issues/554. 
 - from:
   - source:
      namespaces: ["knative-serving"]
 # 3. allow metrics and probes from knative serving namespaces
 - from:
   - source:
      namespaces: ["knative-serving"]
   to:
   - operation:
       paths: ["/metrics", "/healthz", "/ready", "/wait-for-drain"]
